--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
-    "devDependencies": {
-        "axios": "^0.18",
-        "bootstrap": "^4.0.0",
-        "popper.js": "^1.12",
-        "cross-env": "^5.1",
+    "dependencies": {
+        "axios": "^0.18.0",
+        "bootstrap": "^4.1.2",
         "jquery": "^3.2",
-        "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "popper.js": "^1.12",
+        "vue": "^2.5.16",
+        "vue-multiselect": "^2.1.0",
+        "vue-router": "^3.0.1",
+        "vue2-filters": "^0.3.0",
+        "vuex": "^3.0.1"
+    },
+    "devDependencies": {
+        "cross-env": "^5.2.0",
+        "laravel-mix": "^2.1.11",
+        "pug": "^2.0.3"
     }
 }
