--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "bootstrap": "^4.1.2",
         "jquery": "^3.2",
         "lodash": "^4.17.4",
+        "moment": "^2.22.2",
+        "moment-timezone": "^0.5.21",
         "popper.js": "^1.12",
         "vue": "^2.5.16",
         "vue-multiselect": "^2.1.0",
