--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "5.6.*",
         "laravel/passport": "^6.0",
         "laravel/tinker": "^1.0",
-        "lord/laroute": "^2.4"
+        "lord/laroute": "^2.4",
+        "zachflower/eloquent-interactions": "^0.2.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
@@ -42,6 +43,11 @@
         }
     },
     "scripts": {
+        "post-install-cmd": [
+          "Illuminate\\Foundation\\ComposerScripts::postInstall",
+          "php artisan laroute:generate",
+          "php artisan passport:install"
+        ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
@@ -53,6 +59,13 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
+        ],
+        "initialize": [
+            "@php artisan key:generate",
+            "@php artisan laroute:generate",
+            "@php artisan migrate",
+            "@php artisan passport:install",
+            "yarn install"
         ]
     },
     "config": {
