--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
         "moment": "^2.22.2",
         "moment-timezone": "^0.5.21",
         "popper.js": "^1.12",
+        "v-calendar": "^0.9.7",
         "vue": "^2.5.16",
         "vue-multiselect": "^2.1.0",
         "vue-router": "^3.0.1",
+        "vue-toasted": "^1.1.24",
         "vue2-filters": "^0.3.0",
         "vuex": "^3.0.1"
     },
