--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     },
     "devDependencies": {
         "cross-env": "^5.2.0",
+        "eslint": "^5.4.0",
+        "eslint-plugin-vue": "^4.7.1",
         "laravel-mix": "^2.1.11",
+        "prettier": "1.14.2",
         "pug": "^2.0.3"
     }
 }
