--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/passport": "^6.0",
+        "laravel/passport": "^7.0",
         "laravel/tinker": "^1.0",
         "lord/laroute": "^2.4",
+        "spatie/laravel-medialibrary": "^7.4",
         "spatie/laravel-query-builder": "^1.10",
         "zachflower/eloquent-interactions": "^0.2.0"
     },
