--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "axios": "^0.18.0",
+        "axios-progress-bar": "^1.2.0",
         "bootstrap": "^4.1.2",
         "jquery": "^3.2",
         "lodash": "^4.17.4",
