--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-APP_NAME="EasyService"
+APP_NAME="LDS Forms"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://easyservice.test
+APP_URL=http://lds-forms.test
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=easyservice
+DB_DATABASE=lds-forms
 DB_USERNAME=root
 DB_PASSWORD=123456
 
