--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js --watch",
         "watch-poll": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
@@ -12,21 +12,26 @@
         "bootstrap": "^4.2.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^2.0",
+        "laravel-mix": "^4.0.14",
         "lodash": "^4.17.5",
         "moment": "^2.22.2",
         "moment-timezone": "^0.5.23",
         "popper.js": "^1.14.6",
         "pug": "^2.0.3",
+        "pug-plain-loader": "^1.0.0",
         "quill": "^1.3.6",
+        "resolve-url-loader": "2.3.1",
+        "sass": "^1.17.2",
+        "sass-loader": "7.*",
         "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.8",
         "vue-toasted": "^1.1.25"
     },
     "dependencies": {
         "@elitedevsquad/ui": "^0.0.9",
         "@fortawesome/fontawesome-free": "^5.6.3",
         "axios-progress-bar": "^1.2.0",
-        "bootstrap-vue": "^2.0.0-rc.11",
+        "bootstrap-vue": "^2.0.0-rc.14",
         "v-calendar": "^0.9.7",
         "vue-avatar": "^2.1.7",
         "vue-perfect-scrollbar": "^0.1.0",
