--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         "silber/bouncer": "v1.0.0-rc.5",
         "spatie/laravel-medialibrary": "^7.5",
         "spatie/laravel-query-builder": "^1.11",
+        "symfony/css-selector": "^4.2",
+        "symfony/dom-crawler": "^4.2",
         "tightenco/ziggy": "^0.6.9",
         "watson/active": "^3.0"
     },
