--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.14",
+        "laravel-mix-tailwind": "^0.1.0",
         "lodash": "^4.17.5",
         "moment": "^2.22.2",
         "moment-timezone": "^0.5.23",
@@ -23,13 +24,13 @@
         "resolve-url-loader": "2.3.1",
         "sass": "^1.17.2",
         "sass-loader": "7.*",
+        "tailwindcss": "^0.7.4",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.8",
         "vue-toasted": "^1.1.25"
     },
     "dependencies": {
         "@elitedevsquad/ui": "^0.0.9",
-        "@fortawesome/fontawesome-free": "^5.6.3",
         "axios-progress-bar": "^1.2.0",
         "bootstrap-vue": "^2.0.0-rc.14",
         "v-calendar": "^0.9.7",
