--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,10 @@ APP_URL=http://lds-forms.test
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_CONNECTION=pgsql
+DB_PORT=5432
 DB_DATABASE=lds-forms
-DB_USERNAME=root
+DB_USERNAME=marco
 DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
@@ -26,8 +25,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=532509ecaf79b77bb
+MAIL_PASSWORD=b093c113a77234
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
