--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "vue-avatar": "^2.1.7",
         "vue-perfect-scrollbar": "^0.1.0",
         "vue-router": "^3.0.2",
+        "vue-sweetalert2": "^1.6.4",
         "vue-the-mask": "^0.11.1"
     }
 }
