--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "marcot89/laravel-bullet": "^1.0",
         "silber/bouncer": "v1.0.0-rc.5",
         "spatie/laravel-medialibrary": "^7.5",
         "spatie/laravel-query-builder": "^1.11",
